# ImForge

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
docs/: CONTRIBUTING.md  LICENSE.txt  README.md
include/core/: callback.hpp  ui.hpp
include/core/ui/: menu_bar.hpp
include/richtext/: richtext.hpp
include/world/: character.hpp  event.hpp
include/world_objects/: item.hpp  place.hpp  world_data.hpp  world_object.hpp
src/: main.cpp
src/core/ui/: menu_bar.cpp
src/richtext/: richtext.cpp
src/serialize/: serialize.cpp
src/world/: character.cpp  event.cpp  item.cpp  place.cpp  world_data.cpp  world_object.cpp
src/world_objects/: character.cpp  event.cpp  item.cpp  place.cpp  world_data.cpp  world_object.cpp
